updated code to auto-create form upon Form Setup

--- a/vacationtime-solution/src/new-vacationtime-request.html
+++ b/vacationtime-solution/src/new-vacationtime-request.html
@@ -7,7 +7,7 @@
     
     <p>
     Employee name: <?= request['Employee Name:'] ?><br/>
-    Employee email: <?= request['Employee Email:'] ?><br/>
+    Employee email: <?= request.email ?><br/>
     Start date: <?= request['Start Date:'] ?><br/>
     End date: <?= request['End Date:'] ?><br/>
     Description: <?= request['Reason:'] ?><br/>
